page update + createur view + ajout get_notif

--- a/templates/default/createur_view.html.twig
+++ b/templates/default/createur_view.html.twig
@@ -9,12 +9,9 @@
     <link rel="stylesheet" type="text/css" href="{{ asset('css/font-awesome.min.css') }}"/>
     <link rel="stylesheet" type="text/css" href="{{ asset('css/spectrum.css') }}"/>
     <link rel="stylesheet" type="text/css" href="{{ asset('css/main.css') }}"/>
+    <link rel="stylesheet" type="text/css" href="{{ asset('css/view.css') }}"/>
+    <link rel="stylesheet" type="text/css" href="{{ asset('css/view-load.css') }}"/>
     <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}"/>
-    <!--froala-->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.25.0/codemirror.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/froala-editor@2.9.3/css/froala_editor.pkgd.min.css" rel="stylesheet" type="text/css"/>
-    <link href="https://cdn.jsdelivr.net/npm/froala-editor@2.9.3/css/froala_style.min.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 <div id="createBody"></div>
@@ -26,9 +23,9 @@
 <script src="{{ asset('js/jquery-1.10.2.min.js') }}"></script>
 <script src="{{ asset('js/jquery-ui.min.js') }}"></script>
 <script src="{{ asset('js/popper.min.js') }}"></script>
-<script src="{{ asset('js/edit-pams.js') }}"></script>
-<script src="{{ asset('js/createpams.js') }}"></script>
-<script src="{{ asset('js/bootstrap-new.min.js') }}"></script>a
+<script src="{{ asset('js/view-pams.js') }}"></script>
+<script src="{{ asset('js/view-loader.js') }}"></script>
+<script src="{{ asset('js/bootstrap-new.min.js') }}"></script>
 <script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
 <script src="{{ path('fos_js_routing_js', { callback: 'fos.Router.setData' }) }}"></script>
 
