--- a/templates/default/create_interface.html.twig
+++ b/templates/default/create_interface.html.twig
@@ -16,7 +16,7 @@
             <li class="grey-tooltip" data-toggle="tooltip" data-placement="bottom" title="Visualiser le Pam's"><a href="createur_view"><img src="{{ asset('images/visualiser.png') }}"/></a></li>
 
         </ul>
-        <button type="submit" class="btn btn-primary" id="sendDataSubmit"><a href="update">Publier</a></button>
+        <a href="update"><button type="submit" class="btn btn-primary" id="sendDataSubmit">Publier</button></a>
     </div>
 </nav>
 
