--- a/templates/default/update.html.twig
+++ b/templates/default/update.html.twig
@@ -36,6 +36,9 @@
     var pamsJson = {{ Pamsjson|raw }};
 </script>
 
+<script>document.getElementById("publicationPopup").style.display = "block";</script>
+<script>document.getElementById("sendDataSubmit").innerHTML = "Modifier";</script>
+
 <audio id="sound" controls></audio>
 </body>
 </html>
