change button modif

--- a/templates/default/update.html.twig
+++ b/templates/default/update.html.twig
@@ -21,6 +21,7 @@
 {% include 'default/create_interface.html.twig' %}
 {% include 'bgimage-library.html.twig' %}
 {% include 'music-library.html.twig' %}
+{% include 'publication-popup.html.twig' %}
 {% include 'layouts.html.twig' %}
 
 <script src="{{ asset('js/jquery-1.10.2.min.js') }}"></script>
