--- a/templates/default/create.html.twig
+++ b/templates/default/create.html.twig
@@ -29,7 +29,8 @@
 
 {% include 'default/create_interface.html.twig' %}
 {% include 'faq-library.html.twig' %}
-{% include 'publication-popup.html.twig' %}
+{% include 'bgimage-library.html.twig' %}
+{% include 'music-library.html.twig' %}
 {% include 'layouts.html.twig' %}
 
 <script src="{{ asset('js/jquery-1.10.2.min.js') }}"></script>
