--- a/templates/default/create_interface.html.twig
+++ b/templates/default/create_interface.html.twig
@@ -13,9 +13,9 @@
     <div id="navRight">
         <ul>
             <li class="grey-tooltip" data-toggle="tooltip" data-placement="bottom" title="Foire aux Questions" id="faqToggle"><img src="{{ asset('images/faq.png') }}"/></li>
-            <li class="grey-tooltip" data-toggle="tooltip" data-placement="bottom" title="Visualiser le Pam's"><a href="createur_view"><img src="{{ asset('images/visualiser.png') }}"/></a></li>
+            <li class="grey-tooltip" data-toggle="tooltip" data-placement="bottom" title="Visualiser le Pam's" id="seePams"><a href="createur_view"><img src="{{ asset('images/visualiser.png') }}"/></a></li>
         </ul>
-        <a href="update"><button type="submit" class="btn btn-primary" id="sendDataSubmit">Publier</button></a>
+        <a href="update" id="updateLink"><button type="submit" class="btn btn-primary" id="sendDataSubmit">Publier</button></a>
     </div>
 </nav>
 
