--- a/templates/default/createur_view.html.twig
+++ b/templates/default/createur_view.html.twig
@@ -20,9 +20,12 @@
 {% include 'music-library.html.twig' %}
 {% include 'layouts.html.twig' %}
 
+<div id="createurViewReturn">
+    <a href="update">🡠 Retour à l'éditeur </a>
+</div>
+
 <script src="{{ asset('js/jquery-1.10.2.min.js') }}"></script>
 <script src="{{ asset('js/jquery-ui.min.js') }}"></script>
-<script src="{{ asset('js/popper.min.js') }}"></script>
 <script src="{{ asset('js/view-pams.js') }}"></script>
 <script src="{{ asset('js/view-loader.js') }}"></script>
 <script src="{{ asset('js/bootstrap-new.min.js') }}"></script>
