chemin user v1 create >update

--- a/templates/default/createur_view.html.twig
+++ b/templates/default/createur_view.html.twig
@@ -21,7 +21,7 @@
 {% include 'layouts.html.twig' %}
 
 <div id="createurViewReturn">
-    <a href="update">🡠 Retour à l'éditeur </a>
+    <a href="javascript:history.back()">🡠 Retour à l'éditeur </a>
 </div>
 
 <script src="{{ asset('js/jquery-1.10.2.min.js') }}"></script>
