--- a/templates/default/update.html.twig
+++ b/templates/default/update.html.twig
@@ -41,8 +41,8 @@
 <script src="{{ asset('js/popper.min.js') }}"></script>
 <script src="{{ asset('js/spectrum.js') }}"></script>
 <script src="{{ asset('js/edit-pams.js') }}"></script>
-<script src="{{ asset('js/createpams.js') }}"></script>
-<script src="{{ asset('js/bootstrap-new.min.js') }}"></script>a
+<script src="{{ asset('js/edit-createpams.js') }}"></script>
+<script src="{{ asset('js/bootstrap-new.min.js') }}"></script>
 <script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
 <script src="{{ path('fos_js_routing_js', { callback: 'fos.Router.setData' }) }}"></script>
 
