--- a/templates/layouts.html.twig
+++ b/templates/layouts.html.twig
@@ -351,7 +351,7 @@
         </div>
     </div>
     <div class="row">
-        <div id="createContent4avisible-3" class="createContent Block3 col-4 Content50">
+        <div id="createContent4a-3" class="createContent Block3 col-4 Content50">
             <span id="content-addedcreateContent4a-3" class="content-added"></span>
             <div id="triggercreateContent4a-3" class="trigger-modal-block" data-toggle="modal" data-target="#createContentModal">
                 <video autoplay muted  id="createContent4a-3Video" class="createContentVideo" data-toggle="modal" data-target="#createContent4a-3VideoModalContainer">
