--- a/templates/default/create_interface.html.twig
+++ b/templates/default/create_interface.html.twig
@@ -222,3 +222,12 @@
         </div>
     </div>
 </div>
+
+
+<div id="chapitreListContainer">
+<ul>
+    <li class="chapitreActif"> 1 </li>
+    <li> 2 </li>
+    <li> + </li>
+</ul>
+</div>
