--- a/templates/default/create_interface.html.twig
+++ b/templates/default/create_interface.html.twig
@@ -223,11 +223,17 @@
     </div>
 </div>
 
-
+<!--Chapitres-->
 <div id="chapitreListContainer">
-<ul>
-    <li class="chapitreActif"> 1 </li>
-    <li> 2 </li>
-    <li> + </li>
-</ul>
+    <ul>
+        <li class="chapitreActif"><input id="chapitre1" class="input-chapitre " type="radio" value="1" pams_get(1)><label for="chapitre1"> 1 </label></input></li>
+        <li><input id="chapitre2" class="input-chapitre"  type="radio" value="2"><label for="chapitre2"> 2 </label></input></li>
+        <div id="chapitreListHider">
+            <li><input id="chapitre3" class="input-chapitre"  type="radio" value="3" ><label for="chapitre3"> 3 </label></input></li>
+            <li><input id="chapitre4" class="input-chapitre"  type="radio" value="4"><label for="chapitre4"> 4 </label></input></li>
+            <li><input id="chapitre5" class="input-chapitre"  type="radio" value="5"><label for="chapitre5"> 5 </label></input></li>
+            <li><input id="chapitre6" class="input-chapitre"  type="radio" value="6"><label for="chapitre6"> 6 </label></input></li>
+        </div>
+        <li id="chapitreListShow"> + </li>
+    </ul>
 </div>
