--- a/templates/default/create_interface.html.twig
+++ b/templates/default/create_interface.html.twig
@@ -223,7 +223,7 @@
     </div>
 </div>
 
-<!--Chapitres-->
+<!--Chapitres
 <div id="chapitreListContainer">
     <ul>
         <li class="chapitreActif"><input id="chapitre1" class="input-chapitre " type="radio" value="1" pams_get(1)><label for="chapitre1"> 1 </label></input></li>
@@ -237,3 +237,4 @@
         <li id="chapitreListShow"> + </li>
     </ul>
 </div>
+-->
