--- a/templates/default/view.html.twig
+++ b/templates/default/view.html.twig
@@ -35,7 +35,7 @@
 <script src="{{ path('fos_js_routing_js', { callback: 'fos.Router.setData' }) }}"></script>
 
 <script>
-
+    var pamsJson = {{ Pamsjson|raw }};
 </script>
 
 <audio id="sound" controls></audio>
